--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <div class="principal">
-    <h1> front end developer</h1>
+    <h1> developer</h1>
 
     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vero voluptate voluptates consequatur. Ipsam dolorem ab qui dolores cupiditate soluta, ex architecto a sit dignissimos dolorum aliquid praesentium autem inventore.
     Voluptatibus illo libero, harum sequi voluptate est quo ratione hic eum inventore ducimus tenetur qui beatae natus at provident minima nihil esse dicta modi culpa nulla dolor ea? Animi, distinctio!
