adicionando código html e css do footer da  página

--- a/index.html
+++ b/index.html
@@ -46,7 +46,21 @@
 
 <footer>
 
-  
+    <div class="footer-container">
+      <div class="footer">
+        <div class="footer-heading footer-3">
+          <h2>Nossas redes</h2>
+          <a href="#">Instagram</a>
+          <a href="#">Linkedin</a>
+          <a href="#">Youtube</a>
+        </div>
+        <div class="footer-email-form">
+              <h2>Newsletter</h2>
+              <input type="email" placeholder="Enter your email address" id="footer-email">
+              <input type="submit" value="Sign up" id="footer-email-btn">
+        </div>
+      </div>
+    </div>
 </footer>
 
 </body>
