alterações no footer da página, inclusão de ícones.

--- a/servicos.html
+++ b/servicos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Serviços</title>
@@ -40,24 +41,24 @@
         </div>
 
 
-      <footer>
+        <footer>
 
-        <div class="footer-container">
-          <div class="footer">
-            <div class="footer-heading footer-3">
-              <h2>Nossas redes</h2>
-              <a href="#">Instagram</a>
-              <a href="#">Linkedin</a>
-              <a href="#">Youtube</a>
-            </div>
-    
-            <div class="footer-email-form">
-                  <h2>Newsletter</h2>
-                  <input type="email" placeholder="Digite seu melhor email aqui" id="footer-email">
-                  <input type="submit" value="Sign up" id="footer-email-btn">
-            </div>
+          <div class="footer-container">
+            <div class="footer">
+              <div class="footer-heading footer-3">
+                 <h2>Nossas redes</h2>
+                    <a href="">Instagram <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/anne-caroline-fonseca-19720717b/">Linkedin <i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#">Youtube <i class="fa-brands fa-youtube"></i></a>
+               </div>
+  
+           <div class="footer-email-form">
+                <h2>Newsletter</h2>
+                <input type="email" placeholder="Digite seu melhor email aqui" id="footer-email">
+                <input type="submit" value="Sign up" id="footer-email-btn">
+           </div>
           </div>
-        </div>
-    </footer>
+          </div>
+       </footer>
 </body>
 </html>
